--- a/ChachaT/AddingTags.storyboard
+++ b/ChachaT/AddingTags.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mYP-fS-yh2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mYP-fS-yh2">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,7 +12,7 @@
         <!--Add Tags To Your Profile-->
         <scene sceneID="uBc-WO-8Po">
             <objects>
-                <viewController storyboardIdentifier="AddingTagsViewController" title="Add Tags To Your Profile" id="mYP-fS-yh2" customClass="AddingTagsToProfileViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddingTagsViewController" title="Add Tags To Your Profile" automaticallyAdjustsScrollViewInsets="NO" id="mYP-fS-yh2" customClass="AddingTagsToProfileViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="in9-u2-WDu"/>
                         <viewControllerLayoutGuide type="bottom" id="Fr5-lD-rRN"/>
@@ -18,26 +21,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="34F-hU-9oS"/>
-                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="ChachaChoicesTagListView" customModule="Shuffles" customModuleProvider="target">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ACJ-NV-rNZ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="Z9b-Qb-jYN">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Z9b-Qb-jYN" secondAttribute="bottom" id="1Nj-a7-2jt"/>
+                                    <constraint firstItem="Z9b-Qb-jYN" firstAttribute="leading" secondItem="ACJ-NV-rNZ" secondAttribute="leading" id="9CN-H6-Vkw"/>
+                                    <constraint firstItem="Z9b-Qb-jYN" firstAttribute="top" secondItem="ACJ-NV-rNZ" secondAttribute="top" id="Hfx-k1-iVb"/>
+                                    <constraint firstAttribute="trailing" secondItem="Z9b-Qb-jYN" secondAttribute="trailing" id="Wjl-8H-wnk"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="top" secondItem="in9-u2-WDu" secondAttribute="bottom" id="2kv-cA-hCE"/>
-                            <constraint firstItem="34F-hU-9oS" firstAttribute="centerY" secondItem="qcq-BR-zCX" secondAttribute="centerY" id="2mX-BX-vpe"/>
-                            <constraint firstAttribute="trailing" secondItem="f8Q-9k-XpF" secondAttribute="trailing" id="8fM-Gg-TS3"/>
-                            <constraint firstItem="f8Q-9k-XpF" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="cSa-gs-RGF"/>
-                            <constraint firstItem="Fr5-lD-rRN" firstAttribute="top" secondItem="f8Q-9k-XpF" secondAttribute="bottom" id="k4o-c0-31r"/>
-                            <constraint firstItem="34F-hU-9oS" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="osL-TT-jvf"/>
+                            <constraint firstItem="Fr5-lD-rRN" firstAttribute="top" secondItem="ACJ-NV-rNZ" secondAttribute="bottom" id="7Ju-iL-exB"/>
+                            <constraint firstAttribute="trailing" secondItem="ACJ-NV-rNZ" secondAttribute="trailing" id="Loi-MR-GM8"/>
+                            <constraint firstItem="ACJ-NV-rNZ" firstAttribute="leading" secondItem="qcq-BR-zCX" secondAttribute="leading" id="VSe-5y-QhZ"/>
+                            <constraint firstItem="Z9b-Qb-jYN" firstAttribute="width" secondItem="qcq-BR-zCX" secondAttribute="width" id="qd6-2d-gZi"/>
+                            <constraint firstItem="ACJ-NV-rNZ" firstAttribute="top" secondItem="in9-u2-WDu" secondAttribute="bottom" id="uTj-7L-4Eg"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Your Tags" id="lDu-8K-Y1l"/>
                     <connections>
-                        <outlet property="tagChoicesView" destination="f8Q-9k-XpF" id="8CZ-Kb-6in"/>
-                        <outlet property="tagChoicesViewTopConstraint" destination="2kv-cA-hCE" id="yRT-1D-oWm"/>
-                        <outlet property="theActivityIndicator" destination="34F-hU-9oS" id="xVE-me-lTW"/>
+                        <outlet property="tagChoicesViewTopConstraint" destination="uTj-7L-4Eg" id="iGT-Me-2PB"/>
+                        <outlet property="theContentView" destination="Z9b-Qb-jYN" id="tP9-w1-Ldy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZx-kU-P0C" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -57,14 +69,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dGN-g1-Tjh">
+                                <rect key="frame" x="0.0" y="222.5" width="375" height="222"/>
                                 <connections>
                                     <outlet property="dataSource" destination="QeM-1A-Zn7" id="vlb-7a-XjK"/>
                                     <outlet property="delegate" destination="QeM-1A-Zn7" id="I8c-lo-ohz"/>
                                 </connections>
                             </pickerView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="49" translatesAutoresizingMaskIntoConstraints="NO" id="YoZ-GA-MNK">
+                                <rect key="frame" x="120.5" y="454.5" width="134" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehy-tp-Gf3">
+                                        <rect key="frame" x="0.0" y="0.0" width="48" height="30"/>
                                         <state key="normal" title="Cancel">
                                             <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -73,6 +88,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7q-c7-ZCo">
+                                        <rect key="frame" x="97" y="0.0" width="37" height="30"/>
                                         <state key="normal" title="Done">
                                             <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -100,6 +116,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0l1-sl-lYJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2881" y="512"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fhf-PA-BfM">
+            <objects>
+                <viewController id="PCd-wo-GwD" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IDF-CT-Avx"/>
+                        <viewControllerLayoutGuide type="bottom" id="bPR-bx-b7r"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="M1w-yr-oO7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s5S-JK-3N4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
