ice breakers show up in messages and the ice breaker button is now available on the edit profile page

--- a/ChachaT/Profile.storyboard
+++ b/ChachaT/Profile.storyboard
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="222.5"/>
                                 <color key="backgroundColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="316" axis="vertical" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6rx-WT-UoA">
+                            <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="560" placeholderIntrinsicHeight="316" axis="vertical" distribution="equalCentering" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6rx-WT-UoA">
                                 <rect key="frame" x="20" y="296.5" width="335" height="316"/>
                             </stackView>
                         </subviews>
